--- a/HotelOrganizer2/adminwindow.ui
+++ b/HotelOrganizer2/adminwindow.ui
@@ -115,25 +115,25 @@
           <item row="4" column="1">
            <widget class="QLineEdit" name="lineEditClientDays"/>
           </item>
-          <item row="5" column="0">
-           <widget class="QLabel" name="labelClientPeople">
-            <property name="text">
-             <string>Liczba osób</string>
-            </property>
-           </widget>
-          </item>
           <item row="5" column="1">
-           <widget class="QLineEdit" name="lineEditClientPeople"/>
+           <widget class="QSpinBox" name="spinBoxClientRoomNumber"/>
           </item>
-          <item row="6" column="0">
+          <item row="5" column="0">
            <widget class="QLabel" name="labelClientRoom">
             <property name="text">
              <string>Nr pokoju</string>
             </property>
            </widget>
           </item>
+          <item row="6" column="0">
+           <widget class="QLabel" name="labelClientPeople">
+            <property name="text">
+             <string>Liczba osób</string>
+            </property>
+           </widget>
+          </item>
           <item row="6" column="1">
-           <widget class="QLineEdit" name="lineEditClientRoom"/>
+           <widget class="QSpinBox" name="spinBoxClientPeople"/>
           </item>
          </layout>
         </widget>
@@ -255,8 +255,8 @@
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>840</x>
-     <y>463</y>
+     <x>991</x>
+     <y>532</y>
     </hint>
     <hint type="destinationlabel">
      <x>750</x>
@@ -271,8 +271,8 @@
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>879</x>
-     <y>456</y>
+     <x>991</x>
+     <y>532</y>
     </hint>
     <hint type="destinationlabel">
      <x>792</x>
@@ -287,8 +287,8 @@
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>893</x>
-     <y>464</y>
+     <x>991</x>
+     <y>532</y>
     </hint>
     <hint type="destinationlabel">
      <x>874</x>
@@ -303,8 +303,8 @@
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>940</x>
-     <y>463</y>
+     <x>991</x>
+     <y>532</y>
     </hint>
     <hint type="destinationlabel">
      <x>896</x>
@@ -319,8 +319,8 @@
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>935</x>
-     <y>463</y>
+     <x>991</x>
+     <y>532</y>
     </hint>
     <hint type="destinationlabel">
      <x>928</x>
@@ -331,32 +331,32 @@
   <connection>
    <sender>pushButtonResetForm</sender>
    <signal>clicked()</signal>
-   <receiver>lineEditClientPeople</receiver>
+   <receiver>spinBoxClientPeople</receiver>
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>962</x>
-     <y>460</y>
+     <x>963</x>
+     <y>517</y>
     </hint>
     <hint type="destinationlabel">
-     <x>950</x>
-     <y>244</y>
+     <x>939</x>
+     <y>250</y>
     </hint>
    </hints>
   </connection>
   <connection>
    <sender>pushButtonResetForm</sender>
    <signal>clicked()</signal>
-   <receiver>lineEditClientRoom</receiver>
+   <receiver>spinBoxClientRoomNumber</receiver>
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>977</x>
-     <y>467</y>
+     <x>984</x>
+     <y>515</y>
     </hint>
     <hint type="destinationlabel">
-     <x>978</x>
-     <y>279</y>
+     <x>974</x>
+     <y>282</y>
     </hint>
    </hints>
   </connection>
