--- a/HotelOrganizer2/qss/style.qss
+++ b/HotelOrganizer2/qss/style.qss
@@ -68,10 +68,10 @@ QSpinBox {
   background-color: #fafafa;
   border: 1px solid #ccc;
   border-radius: 2px;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
-QLineEdit:focus {
+QLineEdit:focus,
+QSpinBox:focus {
   border: 1px solid #2196f3;
 }
 
