--- a/HotelOrganizer2/roomwindow.ui
+++ b/HotelOrganizer2/roomwindow.ui
@@ -83,13 +83,25 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QLineEdit" name="lineEditRoomInstitution"/>
+           <widget class="QLineEdit" name="lineEditRoomInstitution">
+            <property name="maxLength">
+             <number>500</number>
+            </property>
+           </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QSpinBox" name="spinBoxRoomNumber"/>
+           <widget class="QSpinBox" name="spinBoxRoomNumber">
+            <property name="maximum">
+             <number>1000</number>
+            </property>
+           </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QSpinBox" name="spinBoxRoomPeople"/>
+           <widget class="QSpinBox" name="spinBoxRoomPeople">
+            <property name="maximum">
+             <number>10</number>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
