--- a/HotelOrganizer2/qss/style.qss
+++ b/HotelOrganizer2/qss/style.qss
@@ -61,7 +61,8 @@ QLabel#labelIconAuthors {
 * Formularze, przyciski
 * -------------------------------------------------- */
 QLineEdit,
-QSpinBox {
+QSpinBox,
+QDateEdit {
   padding: 6px 12px;
   font-size: 15px;
   color: #555;
@@ -71,7 +72,8 @@ QSpinBox {
 }
 
 QLineEdit:focus,
-QSpinBox:focus {
+QSpinBox:focus,
+QDateEdit:focus {
   border: 1px solid #2196f3;
 }
 
