--- a/HotelOrganizer2/adminwindow.ui
+++ b/HotelOrganizer2/adminwindow.ui
@@ -44,7 +44,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QTableView" name="tableViewClientList"/>
+        <widget class="QListWidget" name="listWidgetClients"/>
        </item>
       </layout>
      </widget>
