--- a/HotelOrganizer2/roomwindow.ui
+++ b/HotelOrganizer2/roomwindow.ui
@@ -44,7 +44,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QTableView" name="tableViewRoomList"/>
+        <widget class="QListWidget" name="listWidgetRooms"/>
        </item>
       </layout>
      </widget>
